--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
   font-display: auto;
   src:url('../fonts/Poppins-Regular.otf');
 }
+
 body{
   margin: 0;
 }
@@ -58,7 +59,7 @@ main{
   height: 100%;
 }
 video{
-  transition: 5s;
+  /* transition: 5s; */
   position: relative;
   width: 100%;
   height: 100%;
