--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,7 @@ video{
 .XlineOne {
     margin-top: 50%;
     transform: rotateZ(45deg);
-    background-color: blue;
+    background-color: rgb(240,240,240);
     width: 100%;
     height: 10px;
     border-radius: 3px;
@@ -125,7 +125,7 @@ video{
 .XlineTwo {
     margin-top: -10px;
     transform: rotateZ(-45deg);
-    background-color: blue;
+    background-color: rgb(240,240,240);
     width: 100%;
     height: 10px;
     border-radius: 3px;
