--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,33 +104,51 @@ video{
   display: none;
 }
 .exitButton {
-    position: relative;
-    float: right;
-    left: -8vw;
-    top: 3vw;
-    width: 5vw;
-    height: 5vw;
+  z-index: 1;
+  position: relative;
+  /* float: right; */
+  /* left: -8vw; */
+  /* top: 3vw; */
+  width: 100%;
+  height: 100%;
 }
 .exitButton:hover{
-  cursor: pointer;
+  cursor:  pointer;
 }
 .XlineOne {
-    margin-top: 50%;
-    transform: rotateZ(45deg);
-    background-color: rgb(240,240,240);
-    width: 100%;
-    height: 10px;
-    border-radius: 3px;
+  margin-top: 5%;
+  right: 5%;
+  /* float: right; */
+  position: absolute;
+  transform: rotateZ(45deg);
+  background-color: rgb(240,240,240);
+  width: 5vw;
+  height: 10px;
+  border-radius: 3px;
 }
 .XlineTwo {
-    margin-top: -10px;
-    transform: rotateZ(-45deg);
-    background-color: rgb(240,240,240);
-    width: 100%;
-    height: 10px;
-    border-radius: 3px;
+  position: absolute;
+  margin-top: 5%;
+  right: 5%;
+  transform: rotateZ(-45deg);
+  background-color: rgb(240,240,240);
+  width: 5vw;
+  height: 10px;
+  border-radius: 3px;
+  top: 0vw;
 }
 /* someContent */
 .someContent{
   margin-top: 20vw;
+}
+
+.mobileExit{
+  display: none;
+  /* background: rgba(0,0,0,0.5); */
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  /* border: 1px solid red; */
+  top: 0;
+  z-index: 10;
 }
